@@ -172,9 +172,12 @@ static int xmp_symlink(const char *from, const char *to)
 	return 0;
 }
 
-static int xmp_rename(const char *from, const char *to)
+static int xmp_rename(const char *from, const char *to, unsigned int flags)
 {
 	int res;
+
+	if (flags)
+		return -EINVAL;
 
 	res = rename(from, to);
 	if (res == -1)
